crates/wac-parser/tests/resolution/fail/export-url-name.wac
package test:comp;

import f: func();
export f with "url=<https://example.com/foo>";